# kindleparse

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci_cd.yml
src/: cli.py  kindle_parser.py
src/domain/: clipping.py
tests/: test_kindle_parser.py
tests/resources/: My Clippings - example.txt
